--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -402,11 +402,13 @@ pre code{
 		h1 {
 			font-size: 30px;
 			margin-bottom: 24px;
+			text-shadow: 1px 1px 3px #000;
 		}
 		.subheading,
 		.meta {
 			line-height: 1.1;
 			display: block;
+			text-shadow: 1px 1px 3px #000;
 		}
 		.subheading {
 			.sans-serif;
@@ -427,13 +429,16 @@ pre code{
 		}
 		@media only screen and (min-width: 768px) {
 			h1 {
-				font-size: 55px;
+            	font-size: 55px;
+				text-shadow: 1px 1px 3px #000;
 			}
 			.subheading {
 				font-size: 30px;
+				text-shadow: 1px 1px 3px #000;
 			}
 			.meta {
 				font-size: 20px;
+				text-shadow: 1px 1px 3px #000;
 			}
 		}
 	}
