--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,6 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- ga & ba script hoook -->
+    <!-- ga & ba script hook -->
     <script></script>
 </head>
