--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,23 +55,27 @@ layout: default
                 <!-- 多说 Share start -->
 
                 <div class="ds-share"
-                    style="text-align: right"
-                    data-thread-key="{{page.id}}"
-                    data-title="{{page.title}}"
-                    data-url="{{site.url}}{{site.baseurl}}{{page.url}}"
-                    data-images="{{ site.url }}{{site.baseurl}}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}"
-                    data-content="{{ content | strip_html | truncate:80 }} | {{ site.SEOTitle }} " >
+                     style="text-align: right"
+                     data-thread-key="{{page.id}}" data-title="{{page.title}}"
+                     data-url="{{site.url}}{{site.baseurl}}{{page.url}}"
+                     data-images="{{ site.url }}{{site.baseurl}}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}"
+                     data-content="{{ content | strip_html | truncate:80 }} | {{ site.SEOTitle }} ">
                     <div class="ds-share-inline">
-                      <ul  class="ds-share-icons-16">
-                        <li data-toggle="ds-share-icons-more"><a class="ds-more" href="#">分享到：</a></li>
-                        <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">微信</a></li>
-                        <li><a class="ds-weibo flat" href="javascript:void(0);" data-service="weibo">微博</a></li>
-                        <li><a class="ds-douban flat" href="javascript:void(0);" data-service="douban">豆瓣</a></li>
-                      </ul>
-                      <div class="ds-share-icons-more">
-                      </div>
+                        <ul class="ds-share-icons-16">
+                            <li data-toggle="ds-share-icons-more"><a class="ds-more flat" href="#">Share:</a></li>
+                            <li><a class="ds-google flat" href="javascript:void(0);" data-service="google">Google+</a></li>
+                            <li><a class="ds-facebook flat" href="javascript:void(0);" data-service="facebook">Facebook</a> </li>
+                            <li><a class="ds-twitter flat" href="javascript:void(0);" data-service="twitter">Twitter</a></li>
+                            <li><a class="ds-linkedin flat" href="javascript:void(0);" data-service="linkedin">Linkedin</a> </li>
+                            <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">微信</a></li>
+                            <li><a class="ds-weibo flat" href="javascript:void(0);" data-service="weibo">微博</a></li>
+                            <li><a class="ds-qq flat" href="javascript:void(0);" data-service="qq">QQ</a></li>
+                            <li><a class="ds-douban flat" href="javascript:void(0);" data-service="douban">豆瓣</a></li>
+                        </ul>
+                        <div class="ds-share-icons-more">
+                        </div>
                     </div>
-                <hr>
+                    <hr>
                 </div>
                 <!-- 多说 Share end-->
                 {% endif %}
