add mathjax support.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -152,6 +152,18 @@ layout: default
                 {% endif %}
             </div>
         </div>
+
+        <!-- MathJax Config -->
+        <script type="text/javascript">
+            window.MathJax = {
+                menuSettings: {zoom: "Click"}
+            };
+        </script>
+
+        <!-- MathJax -->
+        <script type="text/javascript"
+                src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
+
     </div>
 </article>
 
