refactor css and less.

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,17 @@
 // Variables
 
+// Color variables
 @brand-primary: #0085A1;
 @gray-dark: lighten(black, 25%);
 @gray: lighten(black, 50%);
 @gray-l: lighten(black, 75%);
 @white-faded: fade(white, 80%);
 @gray-light: #eee;
+
+@crimson: #d14;
+@persian-green: #099;
+@gray-60: #999;
+@black: black;
+@gray-80: #ccc;
+@only-998: #998;
+@white-smoke: #f8f8f8;
