--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -265,11 +265,11 @@ layout: default
         s.parentNode.insertBefore(o, s);
     }
 </script>
-<!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/ -->
+<!-- anchor-js, Doc: http://bryanbraun.github.io/anchorjs/ -->
 <script>
     async("http://cdn.bootcss.com/anchor-js/1.1.1/anchor.min.js", function () {
         anchors.options = {
-            visible: 'always',
+            visible: 'hover',
             placement: 'right',
             icon: '#'
         };
