add link to github repo.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,7 +70,8 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    Copyright &copy; <a href="//github.com/wings27/wings27.github.io">{{ site.title }}</a>
+                    {{ site.time | date: '%Y' }}
                     <br>
                     Theme by <a href="http://huangxuan.me">Hux</a>
                 </p>
