--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,22 @@ layout: default
 
                 <hr>
 
+                {% if page.license %}
+                <div class="license">
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.zh">
+                        <img alt="知识共享许可协议" style="border-width:0"
+                             src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png"/>
+                    </a>
+                    <br/>
+                    本作品由<a xmlns:cc="http://creativecommons.org/ns#" href="{{page.url}}" property="cc:attributionName"
+                           rel="cc:attributionURL">Wings27 Blog</a>创作，
+                    采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.zh">
+                    知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
+                </div>
+
+                <hr>
+                {% endif %}
+
                 {% if site.duoshuo_share && site.duoshuo_username %}
                 <!-- 多说 Share start -->
 
