--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -95,7 +95,7 @@ layout: default
                 <!-- gitalk 评论框 start -->
                 <div id="gitalk-container"></div>
                 <!-- gitalk 评论框 end -->
-                {% endif %}q
+                {% endif %}
 
                 {% if site.disqus_username %}
                 <!-- disqus 评论框 start -->
