--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -97,6 +97,10 @@ layout: default
                 <!-- gitalk 评论框 end -->
                 {% endif %}
 
+                {% if site.vssue_clientID %}
+                <div id="vssue"></div>
+                {% endif %}
+
                 {% if site.disqus_username %}
                 <!-- disqus 评论框 start -->
                 <div class="comment">
@@ -152,7 +156,7 @@ layout: default
 
         <!-- MathJax -->
         <script type="text/javascript"
-                src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
+                src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
 
     </div>
 </article>
@@ -173,6 +177,7 @@ layout: default
 </script>
 <!-- gitalk 公共JS代码 end -->
 {% endif %}
+
 
 {% if site.disqus_username %}
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
