--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -109,6 +109,16 @@ layout: default
                 <!-- disqus 评论框 end -->
                 {% endif %}
 
+                <form method="POST" action=" https://dev.staticman.net/v3/entry/github/wings27/wings27.github.io/master/comments">
+                    <input name="options[redirect]" type="hidden" value="https://my-site.com">
+  <!-- e.g. "2016-01-02-this-is-a-post" -->
+                    <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+                    <label><input name="fields[name]" type="text">Name</label>
+                    <label><input name="fields[email]" type="email">E-mail</label>
+                    <label><textarea name="fields[message]"></textarea>Message</label>
+                    <button type="submit">Go!</button>
+                </form>
+
             </div>
 
             <!-- Sidebar Container -->
