--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,9 +110,9 @@ layout: default
                 {% endif %}
 
                 <form method="POST" action=" https://dev.staticman.net/v3/entry/github/wings27/wings27.github.io/master/comments">
-                    <input name="options[redirect]" type="hidden" value="https://my-site.com">
+                    <input name="options[redirect]" type="hidden" value="{{site.url}}">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
-                    <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+                    <input name="options[slug]" type="hidden" value="{{ page.url }}">
                     <label><input name="fields[name]" type="text">Name</label>
                     <label><input name="fields[email]" type="email">E-mail</label>
                     <label><textarea name="fields[message]"></textarea>Message</label>
