--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,8 +33,10 @@
     <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
     {% endif %}
     
+    {% if site.vssue_clientID %}
     <!-- Vssue 的样式文件 -->
     <link rel="stylesheet" href="https://unpkg.com/vssue/dist/vssue.min.css">
+    {% endif %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
