--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,15 +53,7 @@ layout: default
 
                 {% if page.license %}
                 <div class="license">
-                    <a rel="license" href="https://creativecommons.org/licenses/by-nc/4.0/deed.zh">
-                        <img alt="知识共享许可协议" style="border-width:0"
-                             src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png"/>
-                    </a>
-                    <br/>
-                    本作品由<a xmlns:cc="https://creativecommons.org/ns#" href="{{page.url}}" property="cc:attributionName"
-                           rel="cc:attributionURL">Wings27 Blog</a>创作，
-                    采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.zh">
-                    知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br/>本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
                 </div>
 
                 <hr>
@@ -91,6 +83,8 @@ layout: default
                     {% endif %}
                 </ul>
 
+                {% include comments.html %}
+
                 {% if site.gitalk_clientID %}
                 <!-- gitalk 评论框 start -->
                 <div id="gitalk-container"></div>
@@ -108,16 +102,6 @@ layout: default
                 </div>
                 <!-- disqus 评论框 end -->
                 {% endif %}
-
-                <form method="POST" action=" https://dev.staticman.net/v3/entry/github/wings27/wings27.github.io/master/comments">
-                    <input name="options[redirect]" type="hidden" value="{{site.url}}{{page.url}}">
-  <!-- e.g. "2016-01-02-this-is-a-post" -->
-                    <input name="options[slug]" type="hidden" value="{{ page.slug }}">
-                    <label><input name="fields[name]" type="text">Name</label>
-                    <label><input name="fields[email]" type="email">E-mail</label>
-                    <label><textarea name="fields[message]"></textarea>Message</label>
-                    <button type="submit">Go!</button>
-                </form>
 
             </div>
 
