--- a/css/wings27-blog.css
+++ b/css/wings27-blog.css
@@ -1,8 +1,3 @@
-/*!
- * Wings27 Blog v1.0.0 (https://wings27.github.io)
- * Copyright 2020 wings27
- */
-
 @media (min-width: 1200px) {
   .post-container,
   .sidebar-container {
@@ -1009,6 +1004,7 @@ body {
 .add-comment input,
 .add-comment textarea {
   font-size: 13px;
+  background-color: #f8f8f8;
   font-weight: normal;
   border: 1px solid #bfbfbf;
   border-radius: 3px;
@@ -1018,6 +1014,9 @@ body {
   .add-comment textarea {
     font-size: 15px;
   }
+}
+.add-comment input {
+  margin-left: 10px;
 }
 .add-comment button {
   /* Hux learn from
@@ -1031,7 +1030,7 @@ body {
   font-weight: 800;
   letter-spacing: 1px;
   padding: 10px;
-  background-color: whitesmoke;
+  background-color: #f8f8f8;
   border-radius: 0;
 }
 @media only screen and (min-width: 768px) {
