--- a/less/wings27-blog.less
+++ b/less/wings27-blog.less
@@ -1025,13 +1025,17 @@ body {
     font-weight: 500;
   }
   input, textarea {
-    font-size: 13px;  
+    font-size: 13px;
+    background-color: @white-smoke;
     @media only screen and (min-width: 768px) {
       font-size: 15px;
     }
     font-weight: normal;
     border: 1px solid @gray-l;
     border-radius: 3px;
+  }
+  input {
+    margin-left: 10px;
   }
 
   button {
@@ -1041,7 +1045,7 @@ body {
     font-weight: 800;
     letter-spacing: 1px;
     padding: 10px;
-    background-color: whitesmoke;
+    background-color: @white-smoke;
     border-radius: 0;
     @media only screen and (min-width: 768px) {
       font-size: 16px;
