--- a/css/wings27-blog.css
+++ b/css/wings27-blog.css
@@ -1,8 +1,3 @@
-/*!
- * Wings27 Blog v1.0.0 (https://wings27.github.io)
- * Copyright 2020 wings27
- */
-
 @media (min-width: 1200px) {
   .post-container,
   .sidebar-container {
@@ -1009,7 +1004,7 @@ body {
 .add-comment input,
 .add-comment textarea {
   font-size: 13px;
-  background-color: #f8f8f8;
+  background-color: #fcfcfc;
   font-weight: normal;
   border: 1px solid #bfbfbf;
   border-radius: 3px;
@@ -1056,7 +1051,7 @@ body {
   color: #fff;
 }
 .add-comment-container {
-  margin-top: 30px;
+  margin: 30px 0;
 }
 .add-comment-notice {
   font-size: 12px;
