--- a/less/wings27-blog.less
+++ b/less/wings27-blog.less
@@ -1026,7 +1026,7 @@ body {
   }
   input, textarea {
     font-size: 13px;
-    background-color: @white-smoke;
+    background-color: @white-smoke-l;
     @media only screen and (min-width: 768px) {
       font-size: 15px;
     }
@@ -1065,7 +1065,7 @@ body {
 }
 
 .add-comment-container {
-  margin-top: 30px;
+  margin: 30px 0;
 }
 
 .add-comment-notice {
