--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -28,7 +28,7 @@
     <hr/>
     <h4 id="leave-comment">Leave a comment</h4>
     <div class="add-comment-notice">评论内容需要审核后才能显示<br/>
-        提交评论后会自动在<a href="https://github.com/wings27/wings27.github.io/pulls">GitHub创建PR</a>，我会尽快完成审核</div>
+        提交评论后会自动在<a href="https://github.com/wings27/wings27.github.io/pulls">GitHub创建PR</a>，我会尽快完成审核。你可在GitHub PR页Subscribe以获得更新通知。</div>
     <div class="add-comment add-comment-container">
         <form method="POST" action=" https://dev.staticman.net/v3/entry/github/wings27/wings27.github.io/master/comments">
             <input name="options[redirect]" type="hidden" value="{{site.url}}{{page.url}}#comments">
